AM_CPPFLAGS = -I$(srcdir)/../include
lib_LTLIBRARIES = libSCE.la
libSCE_la_LDFLAGS = -version-info @SCE_LIB_VERSION@
libSCE_la_SOURCES = utils/SCELine.c \
                    utils/SCEVector.c \
                    utils/SCEMemory.c \
                    utils/SCEUtils.c \
                    utils/SCEInert.c \
                    utils/SCEError.c \
                    utils/SCEString.c \
                    utils/SCEResource.c \
                    utils/SCEMatrix.c \
                    utils/SCEListFastForeach.c \
                    utils/SCERectangle.c \
                    utils/SCEPlane.c \
                    utils/SCEMath.c \
                    utils/SCEMedia.c \
                    utils/SCEQuaternion.c \
                    utils/SCETime.c \
                    utils/SCEList.c \
                    utils/SCEBacktracer.c \
                    core/SCECTypes.c \
                    core/SCECLight.c \
                    core/SCECSupport.c \
                    core/SCECPointSprite.c \
                    core/SCECMatrix.c \
                    core/SCECBuffer.c \
                    core/SCECVertexArray.c \
                    core/SCECVertexBuffer.c \
                    core/SCECShader.c \
                    core/SCECore.c \
                    core/SCECFramebuffer.c \
                    core/SCECMaterial.c \
                    core/SCECImage.c \
                    core/SCECOcclusionQuery.c \
                    core/SCECTexture.c \
                    SCEGLee.c \
                    interface/libwar.c \
                    interface/lib4fm.c \
                    interface/SCEBox.c \
                    interface/SCESphere.c \
                    interface/SCEBoundingBox.c \
                    interface/SCEBoundingSphere.c \
                    interface/SCECollide.c \
                    interface/SCEFrustum.c \
                    interface/SCEOctree.c \
                    interface/SCENode.c \
                    interface/SCECamera.c \
                    interface/SCELight.c \
                    interface/SCELevelOfDetail.c \
                    interface/SCEGeometry.c \
                    interface/SCEOBJLoader.c \
                    interface/SCEMesh.c \
                    interface/SCESphereGeometry.c \
                    interface/SCEBoxGeometry.c \
                    interface/SCEQuad.c \
                    interface/SCEGeometryInstance.c \
                    interface/SCEBatch.c \
                    interface/SCESceneResource.c \
                    interface/SCEMaterial.c \
                    interface/SCETexture.c \
                    interface/SCEShaders.c \
                    interface/SCESceneEntity.c \
                    interface/SCESkybox.c \
                    interface/SCEParticle.c \
                    interface/SCEParticleEmitter.c \
                    interface/SCEParticleModifier.c \
                    interface/SCEParticleProcessor.c \
                    interface/SCEParticleSystem.c \
                    interface/SCEJoint.c \
                    interface/SCESkeleton.c \
                    interface/SCEAnimatedGeometry.c \
                    interface/SCEAnimation.c \
                    interface/SCEMD5Loader.c \
                    interface/SCEModel.c \
                    interface/SCEScene.c \
                    SCEngine.c
