AM_CPPFLAGS = -I$(srcdir)/../include
lib_LTLIBRARIES = libsceutils.la
libsceutils_la_LDFLAGS = -version-info @SCE_UTILS_LTVERSION@
libsceutils_la_SOURCES = SCELine.c \
                         SCEVector.c \
                         SCEMemory.c \
                         SCEUtils.c \
                         SCEInert.c \
                         SCEError.c \
                         SCEString.c \
                         SCEResource.c \
                         SCEMatrix.c \
                         SCEListFastForeach.c \
                         SCERectangle.c \
                         SCEPlane.c \
                         SCEMath.c \
                         SCEMedia.c \
                         SCEQuaternion.c \
                         SCETime.c \
                         SCEList.c \
                         SCEBacktracer.c

