sce_include_core_HEADERS = SCECBuffers.h \
                           SCECFramebuffer.h \
                           SCECImage.h \
                           SCECLight.h \
                           SCECMaterial.h \
                           SCECMatrix.h \
                           SCECOcclusionQuery.h \
                           SCECore.h \
                           SCECPointSprite.h \
                           SCECShader.h \
                           SCECSupport.h \
                           SCECTexture.h \
                           SCECTypes.h
