sce_include_core_HEADERS = SCECBuffer.h \
                           SCECVertexArray.h \
                           SCECVertexBuffer.h \
                           SCECFramebuffer.h \
                           SCECImage.h \
                           SCECLight.h \
                           SCECMaterial.h \
                           SCECMatrix.h \
                           SCECOcclusionQuery.h \
                           SCECore.h \
                           SCECPointSprite.h \
                           SCECShader.h \
                           SCECSupport.h \
                           SCECTexture.h \
                           SCECTypes.h
