sce_include_interface_HEADERS = lib4fm.h \
                                libwar.h \
                                SCE4FMLoader.h \
                                SCEBatch.h \
                                SCEBoundingBox.h \
                                SCEBoundingSphere.h \
                                SCECamera.h \
                                SCECollide.h \
                                SCEFrustum.h \
                                SCEGeometryInstance.h \
                                SCELevelOfDetail.h \
                                SCELight.h \
                                SCEMaterial.h \
                                SCEMesh.h \
                                SCENode.h \
                                SCEOBJLoader.h \
                                SCEOctree.h \
                                SCEQuad.h \
                                SCEJoint.h \
                                SCESkeleton.h \
                                SCEAnimatedMesh.h \
                                SCEAnimation.h \
                                SCEMD5Loader.h \
                                SCESceneEntity.h \
                                SCEScene.h \
                                SCESceneResource.h \
                                SCEShaders.h \
                                SCESkybox.h \
                                SCESphereMesh.h \
                                SCEModel.h \
                                SCETexture.h
