sce_include_interface_HEADERS = lib4fm.h \
                                libwar.h \
                                SCEBatch.h \
                                SCENode.h \
                                SCEBox.h \
                                SCESphere.h \
                                SCEBoundingBox.h \
                                SCEBoundingSphere.h \
                                SCECollide.h \
                                SCEFrustum.h \
                                SCECamera.h \
                                SCEGeometryInstance.h \
                                SCELevelOfDetail.h \
                                SCELight.h \
                                SCEMaterial.h \
                                SCEGeometry.h \
                                SCEMesh.h \
                                SCEOBJLoader.h \
                                SCEOctree.h \
                                SCEQuad.h \
                                SCEJoint.h \
                                SCESkeleton.h \
                                SCEAnimatedGeometry.h \
                                SCEAnimation.h \
                                SCEMD5Loader.h \
                                SCESceneEntity.h \
                                SCEScene.h \
                                SCESceneResource.h \
                                SCEShaders.h \
                                SCESkybox.h \
                                SCESphereGeometry.h \
                                SCEModel.h \
                                SCETexture.h
