sce_include_interface_HEADERS = lib4fm.h \
                                libwar.h \
                                SCEBatch.h \
                                SCENode.h \
                                SCEBox.h \
                                SCESphere.h \
                                SCEBoundingBox.h \
                                SCEBoundingSphere.h \
                                SCECollide.h \
                                SCEFrustum.h \
                                SCECamera.h \
                                SCEGeometryInstance.h \
                                SCELevelOfDetail.h \
                                SCELight.h \
                                SCEMaterial.h \
                                SCETexture.h \
                                SCEShaders.h \
                                SCEGeometry.h \
                                SCEMesh.h \
                                SCEOBJLoader.h \
                                SCEOctree.h \
                                SCESphereGeometry.h \
                                SCEBoxGeometry.h \
                                SCEQuad.h \
                                SCEParticle.h \
                                SCEParticleEmitter.h \
                                SCEParticleModifier.h \
                                SCEParticleProcessor.h \
                                SCEParticleSystem.h \
                                SCEJoint.h \
                                SCESkeleton.h \
                                SCEAnimatedGeometry.h \
                                SCEAnimation.h \
                                SCEMD5Loader.h \
                                SCESceneEntity.h \
                                SCEScene.h \
                                SCESceneResource.h \
                                SCESkybox.h \
                                SCEModel.h
