sce_include_utils_HEADERS = SCEBacktracer.h \
                            SCEError.h \
                            SCEInert.h \
                            SCELine.h \
                            SCEListFastForeach.h \
                            SCEList.h \
                            SCEMath.h \
                            SCEMatrix.h \
                            SCEMedia.h \
                            SCEMemory.h \
                            SCEPlane.h \
                            SCEQuaternion.h \
                            SCERectangle.h \
                            SCEResource.h \
                            SCEString.h \
                            SCETime.h \
                            SCEUtils.h \
                            SCEVector.h
