sce_include_utils_HEADERS = SCEError.h \
                            SCEMemory.h \
                            SCEArray.h \
                            SCEFile.h \
                            SCEFileCache.h \
                            SCEZlib.h \
                            SCEInert.h \
                            SCELine.h \
                            SCEListFastForeach.h \
                            SCEList.h \
                            SCEMacros.h \
                            SCEMath.h \
                            SCEMatrix.h \
                            polarssl-sha1.h \
                            SCESha1.h \
                            SCEMedia.h \
                            SCEPlane.h \
                            SCEQuaternion.h \
                            SCERectangle.h \
                            SCEResource.h \
                            SCEString.h \
                            SCETime.h \
                            SCEUtils.h \
                            SCEType.h \
                            SCEEncode.h \
                            SCEVector.h
